# danish-asr-leaderboard

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  dataset_card.md  notify.py  pyproject.toml  run_eval.py
.github/workflows/: deploy-space.yml  tests.yml
danish_asr_leaderboard/: __init__.py  audio.py  cli.py  datasets.py  metrics.py  notify.py  raw_outputs.py  results.py  scoring.py
danish_asr_leaderboard/backends/: __init__.py  _torch_util.py  base.py  cohere_backend.py  faster_whisper_backend.py  nemo_backend.py  qwen_asr_backend.py  seamless_backend.py  transformers_backend.py  vibevoice_backend.py  voxtral_backend.py  wav2vec2_backend.py
danish_asr_leaderboard/backends/api/: __init__.py  azure_openai.py  elevenlabs.py  google_chirp.py  soniox.py
danish_asr_leaderboard/normalizer/: __init__.py  danish.py
requirements/: azure_openai.txt  base.txt  cohere.txt  elevenlabs.txt  faster_whisper.txt  google_chirp.txt  nemo.txt  qwen_asr.txt  seamless.txt  soniox.txt  transformers.txt  vibevoice.txt  voxtral.txt  wav2vec2.txt
results/: CoRal-project__roest-v2-wav2vec2-1B.json  CoRal-project__roest-v2-wav2vec2-2B.json  CoRal-project__roest-v3-wav2vec2-315m.json  CoRal-project__roest-v3-whisper-1__5b.json  Qwen__Qwen3-ASR-1__7B.json  capacit-ai__saga.json  facebook__mms-1b-all.json  facebook__seamless-m4t-v2-large.json  gpt-4o-mini-transcribe-benchmark.json  gpt-4o-transcribe-benchmark.json  mistralai__Voxtral-Mini-3B-2507.json  mistralai__Voxtral-Small-24B-2507.json  nvidia__canary-1b-v2.json  nvidia__parakeet-rnnt-110m-da-dk.json  nvidia__parakeet-tdt-0__6b-v3.json  openai__whisper-base.json  openai__whisper-large-v3-turbo.json  openai__whisper-large-v3.json  openai__whisper-small.json  openai__whisper-tiny.json  pluttodk__milo-asr.json  scribe_v2.json  syv-transcribe.json  syvai__hviske-v3-conversation.json  syvai__hviske-v5.json  syvai__hviske-v5__1.json  syvai__hviske-v5__3.json
scripts/: fetch_common_voice_da.py  push_outputs.py  push_results.py  repair_nemo_outputs.py  rescore.py  run_benchmark.sh  update_dataset_card.py  update_space.py
space/: README.md  app.py  dataset_README.md  index.html  leaderboard.json  models.py  requirements.txt
tests/: test_datasets.py  test_deploy_helpers.py  test_nemo_helpers.py  test_normalizer.py  test_notify.py  test_raw_outputs.py  test_results.py
